Proper dependecny injection and ide stuff